Fixed menu visibility bug

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -3,6 +3,7 @@ input {
 }
 
 label {
+  position: sticky;
   display: block;
   float: left;
   width: 20%;
@@ -25,10 +26,11 @@ section {
 }
 
 webview {
-  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  margin-top: 20px;
+  position: absolute;
   display: inline-flex !important;
 }
